# KSOC_Connection

./: LICENSE  README.md  main.py  pyproject.toml  pytest.ini
example/: WIFI_backend_engine.py  get_168_results.py  send_customization_command.py
ksoc_connection/: Server.py  VComPort.py  __init__.py  backend.py  connection.py  engine.py  ksoc_connection.py  logger.py  packet.py
test/: test_packet.py
tests/: test_packet.py
