[tool.poetry]
name = "ksoc-connection"
version = "0.1.0"
description = "Develop for KKT SoC connection"
authors = ["y"]
readme = "README.md"
packages = [{include = "ksoc_connection"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pywin32 = "^306"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
